--- a/CSS/reset.css
+++ b/CSS/reset.css
@@ -53,7 +53,7 @@ footer, header, hgroup, menu, nav, section {
 }
 
 html {
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     height: 100%; 
 }
 
@@ -77,13 +77,8 @@ table {
 	border-spacing: 0;
 }
 
-/* Helper Classes */
-
-.colorPrimary {
-    color: ;
-}
-
 a {
     text-decoration: none; 
 }
 
+/* Helper Classes */
