Top header section completed, starting Services section.

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,6 +1,7 @@
 @import "reset.css";
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import "top-section.css";
+@import"services.css";
 
 
 .container {
