--- a/CSS/top-section.css
+++ b/CSS/top-section.css
@@ -1,16 +1,63 @@
 #top {
-    display: grid; 
-    grid-template-columns: 1fr 1fr;
-}
-
-#top .info {
+    
     
 }
 
+#top .container {
+    display: grid; 
+    grid-template-columns: 1fr 1fr;
+    padding: 80px 0; 
+    
+}
+#top .info {
+    padding: 15px;
+}
+
+#top .info .colored-square {
+    border: 20px solid #dbf1ff;
+    width: 500px;
+    height: 500px;
+    position: absolute;
+    top: 30%;
+    left: -10%;
+    z-index: 0; 
+    
+}
+
+#top .info h1 {
+    position: relative;
+    font-size: 2.5em;
+    text-transform: uppercase;
+    font-weight: 600;
+    color: #16171c;
+    margin-top: 7em;
+    margin-bottom: 1em;
+    letter-spacing: 2px;
+    z-index: 1;
+}
+
+#top .info p {
+    position: relative;
+    color: #919191;
+    margin-bottom: 5em;
+    z-index: 1;
+}
+
+#top .info a {
+    position: relative;
+    color: #16171c;
+    text-transform: uppercase;
+    padding-bottom: 5px;
+    border-bottom: 2px solid #333;
+    font-weight: 700;
+    letter-spacing: 2px;
+    z-index: 1;
+    
+}
 
 #top .img {
     width: 500px;
-    
+    margin: 0 auto;
 }
 
 #top .img .background-img {
