--- a/CSS/main.css
+++ b/CSS/main.css
@@ -2,9 +2,9 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import "top-section.css";
 @import"services.css";
-
+@import"portfolio.css";
 
 .container {
-    max-width: 1400px;
+    max-width: 1150px;
     margin: 0 auto;
 }
