--- a/CSS/services.css
+++ b/CSS/services.css
@@ -41,6 +41,7 @@
     background: rgba(255,255,255,0);
     transition: all .4s ease-in-out;
     padding: 40px;
+    cursor: pointer;
 }
 
 #services .services-container .panel h3 {
@@ -72,8 +73,15 @@
     margin-bottom: 50px;
 }
 
-#services .services-container.panel:hover {
+#services .services-container .panel:hover {
     background: rgba(255,255,255,1);
+    -webkit-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.2);
+    -webkit-box-shadow: 0px 9px 41px -2px rgba(153,153,153,1);
+    -moz-box-shadow: 0px 9px 41px -2px rgba(153,153,153,1);
+    box-shadow: 0px 9px 41px -2px rgba(153,153,153,1);
+    
 }
 
 #services .services-container .box-1 {
