--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -1,6 +1,4 @@
-#portfolio {
-    padding: 80px 15px;
-}
+
 
 #portfolio .title {
     position: relative;
@@ -33,62 +31,39 @@
 #portfolio .portfolio-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-gap: 10px;
+    grid-template-rows: 200px 200px 200px 200px;
+    grid-gap: 15px;
 }
 
 #portfolio .portfolio-container .panel {
-    background: red;
+    background: black;
     display: block;
     transition: all .4s ease-in-out;
-    padding: 40px;
     cursor: pointer;
-    height: 250px;
+    text-transform: uppercase;
+    color: #fff;
+    -webkit-box-shadow: 1px 7px 16px 2px rgba(186,184,186,1);
+-moz-box-shadow: 1px 7px 16px 2px rgba(186,184,186,1);
+box-shadow: 1px 7px 16px 2px rgba(186,184,186,1);
 }
 
-#portfolio .portfolio-container .panel h3 {
+#portfolio .portfolio-container .panel h2 {
     font-size: 1.2em;
     font-weight: 800; 
     letter-spacing: 2px;
     text-transform: uppercase;
-    margin-bottom: 40px;
-}
-
-#portfolio .portfolio-container .panel p {
-    color: #a4a4a4;
-    line-height: 1.5; 
-    margin-bottom: 50px;
-} 
-
-#portfolio .portfolio-container .fa {
-    font-size: 2.5em;
-    margin-bottom: 50px;
-}
-
-#portfolio .portfolio-container .fas {
-    font-size: 2.5em;
-    margin-bottom: 50px;
-}
-
-#portfolio .portfolio-container .fab {
-    font-size: 2.5em; 
-    margin-bottom: 50px;
-}
-
-#portfolio .portfolio-container .panel:hover {
-    background: rgba(255,255,255,1);
-    -webkit-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    transform: scale(1.2);
-    -webkit-box-shadow: 0px 9px 41px -2px rgba(153,153,153,1);
-    -moz-box-shadow: 0px 9px 41px -2px rgba(153,153,153,1);
-    box-shadow: 0px 9px 41px -2px rgba(153,153,153,1);
+    background: rgba(0, 0, 0, 0.7);
+    border-radius: 5px;
     
 }
 
-#portfolio .portfolio-container .image-1 {
-    background: yellow;
-    grid-column:  2 / 3;
-    grid-row: 1 / 5;
-} 
+
+
+
+#portfolio .portfolio-container .panel:hover {
+    
+}
+
+
+
 
