--- a/CSS/reset.css
+++ b/CSS/reset.css
@@ -82,3 +82,13 @@ a {
 }
 
 /* Helper Classes */
+
+.section-padding {
+    padding: 80px 15px; 
+}
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+}
