--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -31,7 +31,7 @@
 #portfolio .portfolio-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 200px 200px 200px 200px;
+    grid-template-rows: 300px 300px 300px 300px;
     grid-gap: 15px;
 }
 
@@ -45,7 +45,7 @@ box-shadow: 1px 7px 16px 2px rgba(186,184,186,1);
 }
 
 #portfolio .portfolio-container .panel h2 {
-    font-size: 1.2em;
+    font-size: .9em;
     font-weight: 800; 
     letter-spacing: 2px;
     text-transform: uppercase;
