--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -31,7 +31,7 @@
 #portfolio .portfolio-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 300px 300px 300px 300px;
+    grid-template-rows: 300px 300px 300px;
     grid-gap: 15px;
 }
 
