--- a/CSS/reset.css
+++ b/CSS/reset.css
@@ -81,7 +81,7 @@ a {
     text-decoration: none; 
 }
 
-/* Helper Classes */
+/*** Helper Classes ***/
 
 .section-padding {
     padding: 80px 15px; 
@@ -91,4 +91,61 @@ a {
     margin-left: auto;
     margin-right: auto;
     width: 100%;
+}
+
+/* Web Icon Colors */
+.fa-html5 {
+    color: #DD723A;
+}
+
+.fa-css3-alt {
+    color: #5464C2;
+}
+
+.fa-js-square {
+    color: #E18D42;
+}
+
+.fa-php {
+    color: #816BB0;
+}
+
+.fa-database {
+    color: #4F4F4F;
+}
+
+.talkbubble {
+   width: 150px;
+   height: 100px;
+   background: red;
+   position: absolute;
+   -moz-border-radius:    10px;
+   -webkit-border-radius: 10px;
+   border-radius:         10px;
+    z-index: 0;
+}
+.talkbubble:before {
+   content:"";
+   position: absolute;
+   right: 100%;
+   top: 26px;
+   width: 0;
+   height: 0;
+   border-top: 13px solid transparent;
+   border-right: 26px solid red;
+   border-bottom: 13px solid transparent;
+}
+
+.pacman {
+  width: 0px;
+  height: 0px;
+    position: absolute;
+  border-right: 60px solid transparent;
+  border-top: 60px solid red;
+  border-left: 60px solid red;
+  border-bottom: 60px solid red;
+  border-top-left-radius: 60px;
+  border-top-right-radius: 60px;
+  border-bottom-left-radius: 60px;
+  border-bottom-right-radius: 60px;
 }
