--- a/CSS/blog-section.css
+++ b/CSS/blog-section.css
@@ -29,20 +29,31 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 588px;
-    grid-gap: 15px;
+    grid-gap: 20px;
+    overflow: hidden; 
+}
+
+#blog-section .blog-container .post {
+    position: relative;
+    transition: all .4s ease-in-out;
+    cursor: pointer;
 }
 
 #blog-section .blog-container .post .post-img {
     width: 100%;
     height: 100%;
-    background-position: top center !important; 
+    background-position: center!important; 
     background-repeat: no-repeat !important; 
     background-size: cover !important; 
 }
 
 #blog-section .blog-container .post .details {
     background: #fff;
-    padding: 35px;
+    padding: 40px 35px;
+    position: absolute;
+    top: 75%;
+    width: 100%;
+    transition: .5s ease;
 }
 
 #blog-section .blog-container .post .details h2 {
@@ -56,17 +67,38 @@
 #blog-section .blog-container .post .details p {
     color:  #a4a4a4;
     letter-spacing: 1.5px;
-    font-weight: 700;
+    font-weight: 600;
     line-height: 1.5;
 }
 
 #blog-section .blog-container .post .read-more {
-    color:  #000;
+    position: absolute;
+    bottom: 0;
+    z-index: 3;
+    width: 100%;
+    padding-bottom: 15px;
+    background: white;
+}
+
+#blog-section .blog-container .post .read-more a {
+    color:  #ff5253;
     letter-spacing: 1.5px;
     font-weight: 400;
     line-height: 1.5;
-    margin-bottom: 1.8em;
-    line-height: 1.5;
     display: inline-block;
-    border-bottom: 2px solid #000; 
+    border-bottom: 2px solid #ff5253; 
+    margin-left: 35px;
+    opacity: 0;
+    transition: all .4s ease-in-out .4s;
+}
+
+/* Hover effect on post */
+
+#blog-section .blog-container .post:hover .details {
+    height: 100%;
+    transform: translate3d(0, -188px, 0);
+}
+
+#blog-section .blog-container .post:hover .read-more a {
+    opacity: 1
 }
