--- a/CSS/main.css
+++ b/CSS/main.css
@@ -5,6 +5,7 @@
 @import "portfolio.css";
 @import "experience.css";
 @import "blog-section.css";
+@import "testimonial-section.css";
 
 .container {
     max-width: 1150px;
