--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,7 +1,7 @@
 @import "reset.css";
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import "top-section.css";
-@import "services.css";
+@import "services-section.css";
 @import "portfolio.css";
 @import "experience.css";
 @import "blog-section.css";
