--- a/CSS/services-section.css
+++ b/CSS/services-section.css
@@ -1,6 +1,6 @@
 
 
-#services .title {
+#services-section .title {
     position: relative;
     width: 200px;
     height: 200px;
@@ -10,7 +10,7 @@
     margin: 0 auto;
 }
 
-#services .title .colored-circle {
+#services-section .title .colored-circle {
     background: #eef9ff;
     width: 150px;
     height: 150px;
@@ -19,7 +19,7 @@
     top: 50;
 }
 
-#services .title h1 {
+#services-section .title h1 {
     position: relative;
     font-size: 2.5em;
     text-transform: uppercase;
@@ -29,7 +29,7 @@
     z-index: 1;
 }
 
-#services .services-container {
+#services-section .services-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr; 
     grid-gap: 40px;
@@ -38,14 +38,14 @@
 
 /****** Services Panel Section ******/
 
-#services .services-container .panel {
+#services-section .services-container .panel {
     background: rgba(255,255,255,0);
     transition: all .4s ease-in-out;
     padding: 40px;
     cursor: pointer;
 }
 
-#services .services-container .panel h3 {
+#services-section .services-container .panel h3 {
     font-size: 1.2em;
     font-weight: 800; 
     letter-spacing: 2px;
@@ -53,28 +53,28 @@
     margin-bottom: 40px;
 }
 
-#services .services-container .panel p {
+#services-section .services-container .panel p {
     color: #a4a4a4;
     line-height: 1.5; 
     margin-bottom: 50px;
 } 
 
-#services .services-container .fa {
+#services-section .services-container .fa {
     font-size: 2.5em;
     margin-bottom: 50px;
 }
 
-#services .services-container .fas {
+#services-section .services-container .fas {
     font-size: 2.5em;
     margin-bottom: 50px;
 }
 
-#services .services-container .fab {
+#services-section .services-container .fab {
     font-size: 2.5em; 
     margin-bottom: 50px;
 }
 
-#services .services-container .panel:hover {
+#services-section .services-container .panel:hover {
     background: rgba(255,255,255,1);
     -webkit-transform: scale(1.3);
     -ms-transform: scale(1.3);
@@ -85,27 +85,27 @@
     
 }
 
-#services .services-container .box-1 {
+#services-section .services-container .box-1 {
     border-bottom: 2px solid #DA7962;
 }
 
-#services .services-container .box-2 {
+#services-section .services-container .box-2 {
     border-bottom: 2px solid #BF2C3B;
 }
 
-#services .services-container .box-3 {
+#services-section .services-container .box-3 {
     border-bottom: 2px solid #C9A556;
 }
 
-#services .services-container .box-4 {
+#services-section .services-container .box-4 {
     border-bottom: 2px solid #9039CF;
 }
 
-#services .services-container .box-5 {
+#services-section .services-container .box-5 {
     border-bottom: 2px solid #90C160;
 }
 
-#services .services-container .box-6 {
+#services-section .services-container .box-6 {
     border-bottom: 2px solid #3C6F99;
 }
 
