Changes made to multiple files.

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -6,6 +6,7 @@
 @import "experience.css";
 @import "blog-section.css";
 @import "testimonial-section.css";
+@import "footer-section.css";
 
 .container {
     max-width: 1150px;
