--- a/CSS/reset.css
+++ b/CSS/reset.css
@@ -114,6 +114,12 @@ a {
     color: #4F4F4F;
 }
 
+.fa-circle {
+    padding: 5px;
+    color: #a4a4a4;
+    transition: color 0.6s ease;
+}
+
 .talkbubble {
    width: 150px;
    height: 100px;
