Changes made to multiple files.

--- a/CSS/experience.css
+++ b/CSS/experience.css
@@ -173,7 +173,7 @@
     color: #7E8CA0;
     
 }
-
+/**** Progress Bar ****/
 /** HTML/CSS **/
 
 #experience-section .experience-container .info .info-box .progress-bar .progress-bar-html-css {
