--- a/CSS/reset.css
+++ b/CSS/reset.css
@@ -27,7 +27,7 @@ time, mark, audio, video {
 }
 
 
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 768px) {
 .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
 .col-3 {width: 25%;}
