--- a/CSS/top-section.css
+++ b/CSS/top-section.css
@@ -1,19 +1,16 @@
-#top {
-    
-    
-}
 
 #top .container {
-    display: grid; 
-    grid-template-columns: 1fr 1fr;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; 
     padding: 80px 0; 
-    
 }
 
 /****** Top Section Info ******/
 
 #top .info {
     padding: 15px;
+    
 }
 
 #top .info .colored-square {
