--- a/CSS/blog-section.css
+++ b/CSS/blog-section.css
@@ -9,8 +9,14 @@
     position: relative;
     width: 200px;
     height: 200px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     margin: 0 auto;
 }
@@ -27,7 +33,7 @@
 
 #blog-section .blog-container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: auto auto auto;
     grid-template-rows: 588px;
     grid-gap: 20px;
     overflow: hidden; 
@@ -35,6 +41,7 @@
 
 #blog-section .blog-container .post {
     position: relative;
+    -webkit-transition: all .4s ease-in-out;
     transition: all .4s ease-in-out;
     cursor: pointer;
 }
@@ -53,6 +60,7 @@
     position: absolute;
     top: 75%;
     width: 100%;
+    -webkit-transition: .5s ease;
     transition: .5s ease;
 }
 
@@ -89,6 +97,7 @@
     border-bottom: 2px solid #ff5253; 
     margin-left: 35px;
     opacity: 0;
+    -webkit-transition: all .4s ease-in-out .4s;
     transition: all .4s ease-in-out .4s;
 }
 
@@ -96,6 +105,7 @@
 
 #blog-section .blog-container .post:hover .details {
     height: 100%;
+    -webkit-transform: translate3d(0, -188px, 0);
     transform: translate3d(0, -188px, 0);
 }
 
