--- a/CSS/services-section.css
+++ b/CSS/services-section.css
@@ -1,11 +1,20 @@
 
+#services-section {
+}
 
+/***** Services Title Section ******/
 #services-section .title {
     position: relative;
     width: 200px;
     height: 200px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     margin: 0 auto;
 }
@@ -29,19 +38,22 @@
     z-index: 1;
 }
 
+/****** Services Container ******/
+
 #services-section .services-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr; 
-    grid-gap: 40px;
     margin-top: 25px;
+    display: grid;
+    grid-template-columns: auto auto auto;
 }
 
 /****** Services Panel Section ******/
 
 #services-section .services-container .panel {
     background: rgba(255,255,255,0);
+    -webkit-transition: all .4s ease-in-out;
     transition: all .4s ease-in-out;
     padding: 40px;
+    margin: 15px;
     cursor: pointer;
 }
 
@@ -76,11 +88,9 @@
 
 #services-section .services-container .panel:hover {
     background: rgba(255,255,255,1);
-    -webkit-transform: scale(1.3);
-    -ms-transform: scale(1.3);
+    -webkit-transform: scale(1.2);
     transform: scale(1.2);
     -webkit-box-shadow: 0px 9px 41px -2px rgba(153,153,153,1);
-    -moz-box-shadow: 0px 9px 41px -2px rgba(153,153,153,1);
     box-shadow: 0px 9px 41px -2px rgba(153,153,153,1);
     
 }
