--- a/CSS/testimonial-section.css
+++ b/CSS/testimonial-section.css
@@ -108,6 +108,31 @@
 
 /*  Bullets/Indicators */
 
+/* Next & previous buttons */
+.prev {
+    cursor: pointer;
+    float: left;
+    position: relative;
+    right: 20px;
+    color: #717171;
+    font-weight: bold;
+    font-size: 2em;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+}
+
+.next {
+    cursor: pointer;
+    float: right;
+    position: relative;
+    left: 20px;
+    color: #717171;
+    font-weight: bold;
+    font-size: 2em;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0; 
+}
+
 .active {
     color: #717171;
 }
@@ -119,6 +144,8 @@
     -webkit-animation-duration: 1.5s;
     animation-name: fade;
     animation-duration: 2s;
+    position: relative;
+    left: 50px;
 }
 
 @-webkit-keyframes fade {
@@ -131,6 +158,9 @@
     to {opacity: 1}
 }
 
+.prev:hover, .next:hover {
+  transform: scale(1.5);
+}
 
 
 
