--- a/CSS/top-section.css
+++ b/CSS/top-section.css
@@ -1,7 +1,7 @@
 
 #top .container {
     display: grid;
-    grid-template-columns: auto auto; 
+    grid-template-columns: repeat(2, 1fr);  
     padding: 80px 0; 
 }
 
@@ -55,7 +55,7 @@
 }
 
 #top .img {
-    width: 500px;
+    width: 100%;
     margin: 0 auto;
 }
 
