--- a/CSS/services-section.css
+++ b/CSS/services-section.css
@@ -43,7 +43,9 @@
 #services-section .services-container {
     margin-top: 25px;
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: repeat(3, 150px); 
+    grid-gap: 10px;
 }
 
 /****** Services Panel Section ******/
