Changes made to multiple files.

--- a/CSS/experience.css
+++ b/CSS/experience.css
@@ -42,7 +42,7 @@
 #experience-section .experience-container {
     margin-top: 25px;
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: repeat(2, 1fr);
     grid-gap: 20px;
 }
 
