--- a/CSS/blog-section.css
+++ b/CSS/blog-section.css
@@ -33,7 +33,7 @@
 
 #blog-section .blog-container {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-template-rows: 588px;
     grid-gap: 20px;
     overflow: hidden; 
@@ -65,7 +65,7 @@
 }
 
 #blog-section .blog-container .post .details h2 {
-    color: #263ce2;
+    color: #52b8ff;
     text-transform: uppercase;
     letter-spacing: 1.5px;
     font-weight: 700;
