--- a/CSS/testimonial-section.css
+++ b/CSS/testimonial-section.css
@@ -6,8 +6,14 @@
     position: relative;
     width: 200px;
     height: 200px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     margin: 0 auto;
 }
@@ -33,11 +39,12 @@
     padding: 55px;
     height: 580px;
     -webkit-box-shadow: 1px 6px 61px 0px rgba(153,153,153,0.75);
-    -moz-box-shadow: 1px 6px 61px 0px rgba(153,153,153,0.75);
     box-shadow: 1px 6px 61px 0px rgba(153,153,153,0.75);
 }
 
 #testimonial-section .testimonial-container .test-center .test-center-hdr {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex; 
     margin-bottom: 50px; 
 }
@@ -47,12 +54,19 @@
 }
 
 #testimonial-section .testimonial-container .test-center .test-center-hdr .image-container img {
-    width: 100%;
+    width: 150px;
 }
 
 #testimonial-section .testimonial-container .test-center .test-center-hdr .customer-info {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     margin-left: 40px
 }
@@ -77,8 +91,14 @@
 }
 
 #testimonial-section .testimonial-container .side-image {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center; 
+    -webkit-box-align: center; 
+    -ms-flex-align: center; 
     align-items: center;
 }
 
@@ -92,7 +112,11 @@
 }
 
 #testimonial-section .testimonial-container .testimonialpager {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     position: relative;
     top: 45%;
@@ -117,6 +141,7 @@
     color: #717171;
     font-weight: bold;
     font-size: 2em;
+    -webkit-transition: 0.6s ease;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
 }
@@ -129,6 +154,7 @@
     color: #717171;
     font-weight: bold;
     font-size: 2em;
+    -webkit-transition: 0.6s ease;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0; 
 }
@@ -143,6 +169,7 @@
     -webkit-animation-name: fade;
     -webkit-animation-duration: 1.5s;
     animation-name: fade;
+    -webkit-animation-duration: 2s;
     animation-duration: 2s;
     position: relative;
     left: 50px;
@@ -159,6 +186,7 @@
 }
 
 .prev:hover, .next:hover {
+  -webkit-transform: scale(1.5);
   transform: scale(1.5);
 }
 
