--- a/CSS/testimonial-section.css
+++ b/CSS/testimonial-section.css
@@ -54,7 +54,7 @@
 }
 
 #testimonial-section .testimonial-container .test-center .test-center-hdr .image-container img {
-    width: 150px;
+    width: 100%;
 }
 
 #testimonial-section .testimonial-container .test-center .test-center-hdr .customer-info {
