--- a/CSS/main.css
+++ b/CSS/main.css
@@ -15,3 +15,24 @@
     margin: 0 auto;
 }
 
+/***** Menu *****/
+
+header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+}
+
+header .logo img {
+    width: 175px;
+}
+
+header .header-menu {
+    position: relative;
+    top: 50px;
+    font-size: 1.1em;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    
+}
+
