--- a/CSS/main.css
+++ b/CSS/main.css
@@ -30,9 +30,33 @@ header .logo img {
 header .header-menu {
     position: relative;
     top: 50px;
-    font-size: 1.1em;
+    left: 35%;
+    font-size: .9em;
     text-transform: uppercase;
-    letter-spacing: 2px;
+    letter-spacing: 2px; 
+}
+
+header .header-menu a {
+    color: #1D1D22;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+    margin-left: 5px;
+}
+
+header .header-menu a:hover {
+    font-weight: 700;
+    -webkit-box-shadow: 0px 9px 41px -2px rgba(153,153,153,1);
+    box-shadow: 0px 9px 41px -2px rgba(153,153,153,1);
     
 }
 
+header .menu-btn {
+    padding: 15px;
+    position: relative;
+    top: 20px;
+    left: 40%;
+    font-size: 2em; 
+    font-weight: 700;
+    display: none; 
+    
+}
