--- a/CSS/main.css
+++ b/CSS/main.css
@@ -18,9 +18,17 @@
 /***** Menu *****/
 
 header {
+    background: #fff;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    padding: 20px;
+    z-index: 2;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between; 
+    overflow: hidden;
+    height: 125px;
 }
 
 header .logo img {
@@ -30,17 +38,25 @@ header .logo img {
 header .header-menu {
     position: relative;
     top: 50px;
-    left: 35%;
     font-size: .9em;
     text-transform: uppercase;
     letter-spacing: 2px; 
+    text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -ms-flex-line-pack: center;
+    align-content: center; 
 }
 
 header .header-menu a {
     color: #1D1D22;
     -webkit-transition: all .4s ease-in-out;
     transition: all .4s ease-in-out;
-    margin-left: 5px;
+    margin-left: 20px;
 }
 
 header .header-menu a:hover {
@@ -51,10 +67,7 @@ header .header-menu a:hover {
 }
 
 header .menu-btn {
-    padding: 15px;
-    position: relative;
-    top: 20px;
-    left: 40%;
+    padding: 20px;
     font-size: 2em; 
     font-weight: 700;
     display: none; 
