--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -24,6 +24,14 @@
 }
 
 @media only screen and (max-width: 767px) {
+    /***** Header Navigation *****/
+     header .header-menu {
+         display: none !important;
+    }
+    
+    header .menu-btn {
+        display: block !important; 
+    }
     /***** Services Section *****/
     #services-section .services-container .panel:hover {
         -webkit-transform: scale(1.0);
@@ -63,13 +71,6 @@
 
 @media only screen and (max-width: 600px) {
     /***** Top Section *****/
-    header .header-menu {
-        display: none; 
-    }
-    
-    header .menu-btn {
-        display: block !important; 
-    }
     
     #top .info {
         position: relative;
