--- a/CSS/top-section.css
+++ b/CSS/top-section.css
@@ -3,6 +3,8 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));  
     padding: 80px 0; 
+    position: relative;
+    top: 100px;
 }
 
 /****** Top Section Info ******/
