--- a/CSS/main.css
+++ b/CSS/main.css
@@ -68,10 +68,52 @@ header .header-menu a:hover {
     
 }
 
+/***** Mobile Menu *****/
+
 header .menu-btn {
     padding: 20px;
     font-size: 2em; 
     font-weight: 700;
     display: none; 
-    
+    cursor: pointer;
 }
+
+.mobile-menu {
+    background: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    padding: 15px;
+    position: absolute;
+    width: 50%;
+    height: 100vh;
+    z-index: 10;
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+}
+.mobile-menu.active {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+}
+
+.mobile-menu a {
+    padding: 10px 5px;
+    color: #1D1D22;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+}
+
+.mobile-menu a:hover {
+    font-weight: 700;
+    -webkit-box-shadow: 0px 9px 41px -2px rgba(153,153,153,1);
+    box-shadow: 0px 9px 41px -2px rgba(153,153,153,1);
+}
+
