--- a/PageCountdown/CSS/reset.css
+++ b/PageCountdown/CSS/reset.css
@@ -1,4 +1,5 @@
 * {
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -14,7 +15,7 @@ html, body {
     font-size: 250px;
 }
 .primary {
-    color: #DD5342;
+    color: #DDEFFF;
 }
 
 
