Changes made to mobile menu.

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -88,18 +88,20 @@ header .menu-btn {
     -ms-flex-direction: column;
     flex-direction: column;
     padding: 15px;
-    position: absolute;
-    width: 50%;
+    position: relative;
+    top: 126px;
+    width: 100%;
     height: 100vh;
     z-index: 10;
-    -webkit-transform: translate3d(-100%, 0, 0);
-    transform: translate3d(-100%, 0, 0);
-    -webkit-transition: all .4s ease-in-out;
-    transition: all .4s ease-in-out;
+    -webkit-box-shadow: 1px 13px 45px -14px rgba(0,0,0,0.48);
+    box-shadow: 1px 13px 45px -14px rgba(0,0,0,0.48);
+    display: none;
 }
 .mobile-menu.active {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
+    height: 300px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
 }
 
 .mobile-menu a {
