--- a/CSS/reset.css
+++ b/CSS/reset.css
@@ -90,6 +90,10 @@ a {
     width: 100%;
 }
 
+.title {
+    padding-top: 40px;
+    margin-bottom: 40px !important;
+}
 /* Fixed Position for Mobile Menu */
 
 .sticky {
