--- a/CSS/project-page.css
+++ b/CSS/project-page.css
@@ -1,61 +1,91 @@
-.portfolio-project {
-    margin-top: 145px
+.grid-container {
+    margin-top: 140px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-auto-rows: auto;
+    grid-gap: 10px;
+    background-color: #F9F7FC;
+    padding: 10px;
 }
 
-.portfolio-project .project-info .project-header {
-    margin-bottom: 50px;
-}
-.portfolio-project .project-info .project-header .project-image {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-}
-
-.portfolio-project .project-info .project-header .project-description {
-    width: 100%;
-    text-align: center; 
-}
-
-.portfolio-project .project-info .project-header .project-description h1 {
-    margin-top: 40px;
-    font-size: 3em;
-}
-
-.portfolio-project .project-info .project-header .project-description p {
-    position: relative;
-    top: 50px;
-    font-size: 1.5em;
-}
-
-.portfolio-project .project-info .project-header .project-description .project-btn {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin-top: 25%;
-    margin-left: 35%;
-}
-
-.portfolio-project .project-info .project-header .project-description .project-btn .btn-1, .btn-2 {
-     
-}
-
-.portfolio-project .project-info .project-header .project-image img {
-    width: 50%; 
-}
-
-.portfolio-project .technologies h1 {
-    width: 50%;
+.grid-container > div {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid #DDEFFF;
     text-align: center;
-    font-size: 1.5em;
-    
 }
+
+.grid-container > div img {
+    width: 100%;
+    height: 100%; 
+}
+
+/* Portfolio Pic */
+.grid-container .project-image {
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 2
+}
+
+/* Project Description */
+.grid-container .project-description h1 {
+    margin: 40px;
+    font-size: 3em;
+    font-weight: 500;
+    color: #1D1D22;
+    text-transform: capitalize;
+    font-weight: 700;
+}
+
+.grid-container .project-description p {
+    color: #1D1D22;
+    margin-bottom: 18%;
+}
+
+.grid-container .project-description .project-btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 12px;
+}
+
+.grid-container .project-description .project-btn .btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    background: #3A3F54;
+    color: #fff;
+    padding: 10px 25px;
+    margin: 0 5px; 
+}
+
+.grid-container .project-description .project-btn .btn i {
+    margin: 5px 5px; 
+}
+
+/* Technologies Info */
+.portfolio-project .technologies h1 {
+    color: #1D1D22;
+    font-size: 1.7em;
+    font-weight: 600;
+    letter-spacing: 2px;
+    text-transform: capitalize; 
+    margin-bottom: 25px; 
+}
+
 .portfolio-project .technologies .tech-icons {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    padding: 0 10px;
 }
 
+.portfolio-project .technologies .tech-icons .icon-1:nth-child(1) {
+    margin-left: ;
+} 
+
 .portfolio-project .technologies .tech-icons .icon-1 {
-    font-size: 5em; 
-    margin: 0 40px;
+    font-size: 3em;
+    padding: 10px 15px;
+    margin: 5px; 
+    -webkit-box-shadow: 0px 3px 17px 0px rgba(186,184,184,1);
+    box-shadow: 0px 3px 17px 0px rgba(186,184,184,1);
 }
