--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -1,8 +1,21 @@
+@media only screen and (max-width: 1024px) {
+        /***** Project Page *****/
+    .portfolio-project .technologies .tech-icons {
+    margin-left: 0 !important;
+}
+
+}
+
 @media only screen and (max-width: 912px) {
     /***** Top Section *****/
     #top .info .colored-square {
         width: 125px;
     }
+    
+           /***** Project Page *****/
+    .portfolio-project .technologies .tech-icons {
+    margin-left: 5% !important;
+}
 }
 
 @media only screen and (max-width: 811px) {
@@ -79,6 +92,22 @@
 }
 
 @media only screen and (max-width: 600px) {
+    /***** Project Page *****/
+    .portfolio-project .project-description {
+        grid-column: 1 / span 2; 
+    }
+    
+    .portfolio-project .project-description h1 {
+        font-size: 2.5em !important; 
+    }
+    
+    .portfolio-project .technologies {
+        grid-column: 1 / span 2; 
+    }
+    
+    .portfolio-project .project-btn {
+    }
+    
     /***** Top Section *****/
     #top .container {
         padding-bottom: 0 !important;
