Added a hide on scroll function to the header of the website.

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -10,6 +10,7 @@
 @import "responsive.css";
 @import "hovereffect.css";
 @import "project-page.css";
+@import "navigation.css";
 
 .container {
     max-width: 1160px;
