--- a/CSS/experience.css
+++ b/CSS/experience.css
@@ -42,12 +42,20 @@
 .experience-container {
     margin-top: 25px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-auto-rows: repeat(3, 150px); 
+    grid-gap: 10px;
+}
+.experience_image_container {
+    margin: auto;
+    width: 380px;
+    height: 380px
 }
 
-
-
+.experience_image {
+    width: 100%;
+    height: 100%;
+}
 
 
 
